--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,9 +10,8 @@
 <header>
     <nav>
         <ul>
-            {% for item in site.navigation %}
-            <li><a href="{{ item.link }}">{{ item.name }}</a></li>
-            {% endfor %}
+            <li><a href="/">Home</a></li>
+            <li><a href="/Testing/">Testing</a></li>
         </ul>
     </nav>
 </header>
@@ -20,7 +19,10 @@
     {{ content }}
 </main>
 <footer>
-    <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}</p>
+    <ul>
+        <li><a href="https://www.linkedin.com/in/ivanzdanovich">LinkedIn</a></li>
+        <li><a href="https://github.com/IvanZdanovich">GitHub</a></li>
+    </ul>
 </footer>
 </body>
 </html>
